== 0.8.x (in git)

== 0.8.0 2012-06-02

  * Support for Mongoid 3/Moped (Andrew Bennett)
  * Postgres Adapter no longer generates invalid SQL when no tables provided. (Michael-Keith Bernard)

== 0.7.2 2012-03-21

  * Proper Mysql2Adapter superclass fix. (Jonathan Viney)
  * Sequel::Transaction works with latest Sequel. (David Barri)
  * Documenation fixes/improvements. (David Barri, Ben Mabey, Kevin Moore)

== 0.7.1 2012-01-15

 === New Features

 * Support for Rails 3.2. (David Demaree)

=== Bugfixes

  * Truncation resets the id count on SQLite. (Jordan Hollinger)
  * AR delete strategy now disables referential integrity. (Ben Mabey)
  * Fixes Postgres adapter for JRuby. (Dmytrii Nagirniak, Uģis Ozols)
  * Documenation fixes. (Josh Rendek, Joshua Flanagan)
  * Fixes bad error message when no database is specified for AR. (issue #72, Ben Mabey)


== 0.7.0 2011-11-12

 === New Features

 * Sequel Support (Corin Langosch)
 * Updates DataMapper strategies to work with DataMapper 1.1 (Xavier Shay and Anthony Williams)
 * for AR and PSQL, truncate all tables with one command, improving performance due to avoiding cascades (Leonid Shevtsov)

=== Bugfixes

  * Avoids trying to load the ':default' ActiveRecord config. #72 (Ben Mabey)


== 0.6.7 2011-04-21

=== Bugfixes
 * Explicity require ERB. (Vít Ondruch)
 * Cache DB connections, fixes referential integrity bug when using multiple DBs. (John Ferlito)

== 0.6.6 2011-03-16

=== Bugfixes
 * Don't modify the array passed in with the :except key. (Eric Wollesen)
 * Fixes version checking for postgresql. (Greg Barnett)

== 0.6.5 2011-03-08

=== Bugfixes
 * When truncating in postgresql (>= 8.4) sequences are now reset. (Greg Barnett)
 * Fixes the MongoDB truncation so non system collections starting with 'system' are not excluded for truncation. (Dmitry Naumov)

== 0.6.4 2011-02-21

=== Bugfixes
 * Avoids trying to drop views in Postgres. (Bernerd Schaefer)

== 0.6.3 2011-02-09

 === New Features