@@ -13,6 +13,11 @@ module ActiveRecord
         @views ||= select_values("select table_name from information_schema.views where table_schema = '#{current_database}'") rescue []
       end
 
+      def database_cleaner_table_cache
+        # the adapters don't do caching (#130) but we make the assumption that the list stays the same in tests
+        @database_cleaner_tables ||= tables
+      end
+
       def truncate_table(table_name)
         raise NotImplementedError
       end
@@ -137,7 +142,7 @@ module DatabaseCleaner::ActiveRecord
     private
 
     def tables_to_truncate(connection)
-       (@only || connection.tables) - @tables_to_exclude - connection.views
+      (@only || connection.database_cleaner_table_cache) - @tables_to_exclude - connection.views
     end
 
     # overwritten
