@@ -1,5 +1,7 @@
 == 0.8.x (in git)
 
+  * ActiveRecord truncation strategy caches the list of tables #130 (Petteri Räty)
+
 == 0.8.0 2012-06-02
 
   * Support for Mongoid 3/Moped (Andrew Bennett)
